fix when text overlapped nav menu

--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ nav {
     border-radius: 16px;
     width: 12.5rem;
     background-color: #F4F8DF;
-    z-index: 1;
+    z-index: 2;
 }
 
 .nav--sidebar ul {
